# gaodaoyi

./: Cargo.toml
App.Tauri/: README.md
App.Tauri/src/: index.html  main.js  styles.css
App.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
App.Tauri/src-tauri/assets/: json
App.Tauri/src-tauri/icons/: icon.icns
App.Tauri/src-tauri/src/: gaodaotext.rs  gram.rs  lib.rs  main.rs
assets/book/: gaodaoyiduan.epub
assets/json/: gd01.json  gd02.json  gd03.json  gd04.json  gd05.json  gd06.json  gd07.json  gd08.json  gd09.json  gd10.json  gd11.json  gd12.json  gd13.json  gd14.json  gd15.json  gd16.json  gd17.json  gd18.json  gd19.json  gd20.json  gd21.json  gd22.json  gd23.json  gd24.json  gd25.json  gd26.json  gd27.json  gd28.json  gd29.json  gd30.json  gd31.json  gd32.json  gd33.json  gd34.json  gd35.json  gd36.json  gd37.json  gd38.json  gd39.json  gd40.json  (+24 more)
assets/templates/: oracle_gua.md  oracle_yao.md
assets/web/: index.html  scripts.js  styles.css
epub2html/: Cargo.toml
epub2html/fixed/: Section0021.html  Section0026.html  Section0029.html  Section0049.html
epub2html/src/: main.rs
html2json/: Cargo.toml
html2json/src/: main.rs
scripts/: ls_glyphs.py
src/: gaodaotext.rs  gram.rs  main.rs  web.rs
