[package]
name = "gaodaoyi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.4", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
inquire = { git = "https://github.com/mikaelmello/inquire", rev = "3cd5d7a" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
viuer = "0.9.1"

[workspace]
members = [
    "epub2html",
    "html2json"
]
