[package]
name = "gaodaoyi"
version = "0.10.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
clap = { version = "4.4", features = ["derive"] }
clearscreen = "4.0.1"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
inquire = { git = "https://github.com/mikaelmello/inquire", rev = "3cd5d7a" }
markdown = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tera = { version = "1.20.0", default-features = false }
termimad = "0.31.1"
viuer = "0.9.1"

[workspace]
members = [
    "epub2html",
    "html2json"
]
exclude = [
    "gaodaoyi-gui"
]

[profile.release]
strip = true
